--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,10 +25,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/JShooting.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derbyclient.jar=lib/derbyclient.jar
+file.reference.hibernatesqlite-1.0.jar=lib/hibernatesqlite-1.0.jar
+file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${libs.hibernate-support.classpath}:\
+    ${libs.ejb3-persistence.classpath}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.hibernatesqlite-1.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
