--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JShooting
+application.vendor=\u0410\u043b\u0435\u043a\u0441\u0430\u043d\u0434\u0440 \u041f\u0440\u0435\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0446\u0435\u0432
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,12 +25,15 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/JShooting.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.derbyclient.jar=lib/derbyclient.jar
 file.reference.hibernatesqlite-1.0.jar=lib/hibernatesqlite-1.0.jar
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${libs.hibernate-support.classpath}:\
@@ -61,6 +65,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=com.jshooting.forms.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
