--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=
 excludes=
 file.reference.derbyclient.jar=lib/derbyclient.jar
 file.reference.hibernatesqlite-1.0.jar=lib/hibernatesqlite-1.0.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -40,7 +41,8 @@ javac.classpath=\
     ${libs.ejb3-persistence.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.hibernatesqlite-1.0.jar}:\
-    ${file.reference.sqlite-jdbc-3.7.2.jar}
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
