--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,7 +1,7 @@
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
-libs.CopyLibs.displayName=\u0417\u0430\u0434\u0430\u0447\u0430 CopyLibs
-libs.CopyLibs.prop-version=1.0
+libs.CopyLibs.displayName=CopyLibs Task
+libs.CopyLibs.prop-version=3.0
 libs.ejb3-persistence.classpath=\
     ${base}/ejb3-persistence/ejb3-persistence.jar
 libs.ejb3-persistence.displayName=\u041f\u0435\u0440\u0441\u0438\u0441\u0442\u0435\u043d\u0442\u043d\u043e\u0441\u0442\u044c
